scripts/cicd/cd/ingress/rm-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rm-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-staging
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: webui
    servicePort: 10080
  tls:
  - hosts:
    - DNSGIVENNAME.REGION.cloudapp.azure.com 
    secretName: tls-secret
  rules:
  - host: DNSGIVENNAME.REGION.cloudapp.azure.com
    http:
      paths:
      - path: /party-clippy
        backend:
          serviceName: party-clippy
          servicePort: 80
      - path: /storageadapter/*
        backend:
          serviceName: storageadapter
          servicePort: 80
      - path: /iothubmanager/*
        backend:
          serviceName: iothubmanager
          servicePort: 80
      - path: /devicetelemetry/*
        backend:
          serviceName: devicetelemetry
          servicePort: 80
      - path: /devicesimulation/*
        backend:
          serviceName: simulation
          servicePort: 80
      - path: /config/*
        backend:
          serviceName: config
          servicePort: 80
      - path: /asamanager/*
        backend:
          serviceName: asamanager
          servicePort: 80
      - path: /
        backend:
          serviceName: webui
          servicePort: 10080
      - path: /auth/*
        backend:
          serviceName: auth
          servicePort: 80
